<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.uniandes.appzheimer.activities.CrearPerfilActivity"
    tools:showIn="@layout/activity_crear_perfil">

    <LinearLayout
        android:id="@+id/linearLayoutCrearPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/nombrePacienteLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_paciente_lbl"/>

        <EditText
            android:id="@+id/nombrePacienteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_paciente_lbl"
            android:inputType="text"/>

        <TextView
            android:id="@+id/apodoPacienteLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apodo_paciente_lbl"/>

        <EditText
            android:id="@+id/apodoPacienteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apodo_paciente_lbl"
            android:inputType="text"/>

        <TextView
            android:id="@+id/fechaNacimientoPacienteLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento_paciente_lbl"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento_paciente_lbl"
            android:onClick="showDatePickerDialog" />

    </LinearLayout>

</RelativeLayout>
